--- a/docs/openapi.mdx
+++ b/docs/openapi.mdx
@@ -1,3 +1,3 @@
-# Kommt ... irgendwann
+# Kommen ... irgendwann
 
-Jaja openapi (ehemals swagger) kommt auch
+Jaja openapi (ehemals swagger) kommen auch
