--- a/summaries/cesti/itsec/test.mdx
+++ b/summaries/cesti/itsec/test.mdx
@@ -1,5 +1,5 @@
 ---
-title: Hier könnte Ihre Zusammenfassung stehen
+title: Hier könnte ihre Zusammenfassung stehen
 order: 1
 description: Brauche Hilfe ganz dringend
 author: Jonas Schneider
